# agent-cockpit

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  A2A_GUIDE.md  AGENT_OPS_STORY.md  BE_INTEGRATION_GUIDE.md  CAPABILITIES_REGISTRY.md  CHANGELOG.md  CHEAT_SHEET.md  CLI_COMMANDS.md  COCKPIT_GUIDE.md  COCKPIT_V1.9.0_EVOLUTION.md  CODEBASE_BUNDLE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOGFOODING.md  DOGFOOD_POST.md  Dockerfile  Dockerfile.azure  Dockerfile.backend  Dockerfile.gcp  Dockerfile.original  EVOLUTIONARY_BENCH_V2.md  GEMINI.md  GETTING_STARTED.md  GOOGLE_ARCHITECTURE.md  GOVERNANCE_GUIDE.md  INDUSTRY_HARDENING_v2.0_FINAL.md  MANIFEST.in  MEDIUM_POST.md  Makefile  OPTIMIZATION_GUIDE.md  PRIVACY.md  PRODUCTION_CHECKLIST.md  README.md  ROADMAP.md  SECURITY_GUIDE.md  STRATEGIC_MEMO_v2.0.md  (+76 more)
.agent/workflows/: validate.md  zero2hero.md
.cleanup_archive/: CODEBASE_BUNDLE.md  debug_paradigm.py  llm.txt
.cockpit/: cockpit_audit.sarif  evidence_lake.json  fleet_dashboard.html  fleet_registry.json  gemini_enterprise_registry.json
.cockpit/patches/: .._ai-tpc-agent_src_ai_tpc_agent_core_agent.py.patch  .._ai-tpc-agent_src_ai_tpc_agent_core_email_bridge.py.patch  .._ai-tpc-agent_src_ai_tpc_agent_core_github_bridge.py.patch  .._ai-tpc-agent_src_ai_tpc_agent_core_maturity.py.patch  .._ai-tpc-agent_src_ai_tpc_agent_core_vector_store.py.patch  (+132 more)
.firebase/: hosting.ZGlzdA.cache
.github/: PULL_REQUEST_TEMPLATE.md
dist_py/: agentops_cockpit-1.4.0-py3-none-any.whl
docs/: AGENT_OPS_STORY.md  AUDIT_SCENARIOS.md  BE_INTEGRATION_GUIDE.md  CLI_COMMANDS.md  COCKPIT_ARCHITECTURE.md  COCKPIT_GUIDE.md  COCKPIT_SECURITY.md  DEPLOYMENT.md  GEMINI.md  GETTING_STARTED.md  GOOGLE_ARCHITECTURE.md  GUIDE_RED_TEAM.md  GUIDE_RELIABILITY.md  INTRODUCTION.md  LANGCHAIN_INTEGRATION.md  LIMITATIONS.md  POST_MORTEM_PR_1027.md  PRD.md  PRODUCTION_CHECKLIST.md  README.md  RFC_GOVERNANCE_AS_CODE.md  ROADMAP.md  ROADMAP_V13.md  SOVEREIGN_ARCHITECTURE.md  SOVEREIGN_SECURITY.md  TECHNICAL_A2A_GUIDE.md  TECHNICAL_ARCH_REVIEW.md  TECHNICAL_AUDIT_GUIDE.md  TECHNICAL_COMMANDS_MASTER.md  TECHNICAL_COMPLIANCE_GUIDE.md  TECHNICAL_FINOPS_GUIDE.md  TECHNICAL_INFRA_GUIDE.md  TECHNICAL_QUALITY_GUIDE.md  TECHNICAL_REDTEAM_GUIDE.md  TECHNICAL_UVX_MASTER.md  TECHNICAL_UX_GUIDE.md  v2.1_TECHNICAL_SPEC.md
examples/: distinguished_architect.py
functions/: aws-apprunner.json  gemini_registration.json  main.py  requirements.txt
lab-tutorial-agent/: agent.py  agent_engine_deploy.py  requirements.txt
lab-tutorial-agent-alt/: agent.py  agent_engine_app.py  agent_engine_deploy.py
langchain_cockpit_publishing/: COMMUNITY_PITCH.md  LANGCHAIN_DOCS_PR.md  pyproject.toml  test_governance.py
langchain_cockpit_publishing/langchain_cockpit/: callbacks.py
my-super-agent/: agent.py  requirements.txt
my_super_agent/: agent.py  agent_engine_app.py
public/: A2A_GUIDE.md  AGENT_OPS_STORY.md  AUDIT_SCENARIOS.md  BE_INTEGRATION_GUIDE.md  CHANGELOG.md  CLI_COMMANDS.md  COCKPIT_ARCHITECTURE.md  COCKPIT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOGFOODING.md  DOGFOOD_POST.md  GEMINI.md  GETTING_STARTED.md  GOOGLE_ARCHITECTURE.md  GOVERNANCE_GUIDE.md  GUIDES.md  GUIDE_ARCH_REVIEW.md  GUIDE_AUDIT.md  GUIDE_DEPLOYMENT.md  GUIDE_LOAD_TEST.md  GUIDE_MCP.md  GUIDE_OPTIMIZER.md  GUIDE_POLICY.md  GUIDE_RED_TEAM.md  GUIDE_RELIABILITY.md  INTRODUCTION.md  LIMITATIONS.md  OPTIMIZATION_GUIDE.md  PRD.md  PRODUCTION_CHECKLIST.md  README.md  RFC_GOVERNANCE_AS_CODE.md  ROADMAP.md  ROADMAP_V13.md  SECURITY_GOVERNANCE.md  SECURITY_GUIDE.md  TECHNICAL_A2A_GUIDE.md  TECHNICAL_ARCH_REVIEW.md  (+19 more)
scripts/: aggregate_telemetry.py  aws-apprunner.json  docker_hardener.py  escape_outputs.py  final_hardener.py  finops_patch.py  fleet_dna_analyzer.py  gemini_registration.json  generate_sample_dashboard.py  governance_patch.py  hardened_ui.py  hill_climber.py  logging_injector.py  mcp_patch.py  mcp_schema_hardener.py  policy_engine.ts  reflection_patch.py  setup_supabase.sql  sre_hardener.py  sync_docs.py  syntax_cleanup.py
src/: App.tsx  index.css
tests/: mixed_bag_agent.py  paradigm_test_case.py  test_hill_climb.py  test_telemetry_hardened.py  test_wisdom_integrity.py
traces/: 41177281-d0ef-4d6b-87c3-29245213d7f4.json  90ba717f-3ac4-4074-8f94-36f8b3000226.json  bf4df802-8c7b-45a8-98e4-26de5473c0f8.json  fdb75c27-66dd-4005-8b53-af8fad39e6a9.json  ff8474a1-4b3f-45fb-9e55-9f51b1cf53dd.json
(+464 files in other folders)
