[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentops-cockpit"
version = "1.3.4"
description = "Production-grade Agent Operations (AgentOps) Platform"
readme = "README.md"
authors = [
    { name = "Enrique", email = "enriquekalven@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "mcp>=0.1.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "packaging>=23.0",
    "tenacity>=8.0.0",
    "pytest>=8.0.0",
    "langchain>=0.2.0",
    "crewai>=0.40.0",
]

[project.urls]
"Homepage" = "https://github.com/enriquekalven/agent-ops-cockpit"
"Bug Tracker" = "https://github.com/enriquekalven/agent-ops-cockpit/issues"

[project.scripts]
agentops-cockpit = "agent_ops_cockpit.cli.main:app"
ops = "agent_ops_cockpit.cli.main:app"
aops = "agent_ops_cockpit.cli.main:app"
agent-ops = "agent_ops_cockpit.cli.main:app"
agent-ops-mcp = "agent_ops_cockpit.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_ops_cockpit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/public",
    "README.md",
    "A2A_GUIDE.md",
    "DEPLOYMENT.md",
    "BE_INTEGRATION_GUIDE.md",
    "firebase.json",
    "Makefile",
    "Dockerfile",
    "package.json",
    "tsconfig.json",
    "vite.config.ts",
    "index.html",
]
